--- a/contato.html
+++ b/contato.html
@@ -2,10 +2,32 @@
 <html lang="pt_br">
 
 <head>
+    <title>JM Viagens - Contato</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+    <table border="0" width="900" align="center">
+        <tr>
+            <td><img src="imagens-projeto-final-html/logo.png"></td>
+            <td align="right">
+                <a href="index.html">Home</a> |
+                <a href="quem-somos.html">Quem somos</a> |
+                <a href="contato.html">Contatos</a> 
+            </td>
+        </tr>
+        <tr>
+           <td colspan="2"><img src="imagens-projeto-final-html/contato.png"></td> 
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h2>E-mail: jmviagens@jmviagens.com.br</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet libero arcu. Donec id odio ipsum. Sed suscipit ipsum sed ex posuere placerat. Fusce a turpis dapibus purus viverra mattis non ac nunc. Integer quis dapibus dui. Suspendisse viverra erat in dui blandit vehicula. Etiam ut sollicitudin ligula. Nam vel sem sem. Mauris posuere massa eget magna dictum porttitor. Suspendisse potenti. Sed ac aliquet lectus. Ut ipsum dui, auctor dictum placerat non, finibus non libero. Ut id ex laoreet, volutpat nibh vel, hendrerit nunc.</p>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" align="center"><h4>Todos os direitos reservados</h4></td>
+        </tr>
+    </table>
 </body>
 </html>
